--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,19 +6,7 @@
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
-{#
-
-    <div class="form-group">
-        <input type="email" class="form-control" placeholder="Email" required name="_email">
-    </div>
-    <div class="form-group">
-        <input type="password" class="form-control" placeholder="password" required name="_password">
-    </div>
-#}
-
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-
     <div class="form-group">
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
     </div>
@@ -26,9 +14,7 @@
     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
     </div>
     <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
+           value="{{ csrf_token('authenticate') }}">
     <button class="btn btn-primary mr-1" type="submit">
         Sign in
     </button>
